# Smolit-Assistant

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  MASTER-PROMPT.md  README.md  ROADMAP.md
.claude/: settings.json
core/: Cargo.toml
core/src/: app.rs  capabilities.rs  capability_guard.rs  config.rs  event_loop.rs  main.rs  secrets_store.rs  settings_store.rs
core/src/actions/: event.rs  mapping.rs  mod.rs  plan.rs  target.rs
core/src/adapters/: abrain.rs
core/src/approvals/: mod.rs  request.rs  response.rs  state.rs
core/src/audio/: mod.rs  stt.rs  tts.rs  types.rs
core/src/audit/: correlation.rs  event.rs  mod.rs  store.rs
core/src/interaction/: accessibility.rs  action.rs  backend.rs  executor.rs  mod.rs  recovery.rs  selection.rs  types.rs  verifier.rs
core/src/ipc/: mod.rs  protocol.rs  server.rs
core/src/providers/: mod.rs  stt.rs  text.rs  tts.rs
docs/: GLOSSARY.md  OPEN_WORK.md  SETUP.md  VISION.md  api.md  avatar_stage_c_research.md  linux_always_on_top_decision.md  linux_interaction_backends_research.md  linux_overlay_verification_matrix.md  linux_window_overlay_architecture.md  presence_desktop_interaction.md  provider_fallback_and_settings_architecture.md  ui_architecture.md  wayland_always_on_top_refusal_results.md  window_behavior_backend_verification.md  wlroots_overlay_path.md  x11_always_on_top_results.md  x11_always_on_top_verification.md
scripts/: approval_card_smoke.gd  audit_panel_smoke.gd  avatar_appearance_smoke.gd  avatar_expression_smoke.gd  avatar_identity_smoke.gd  avatar_preferences_smoke.gd  avatar_render_polish_smoke.gd  avatar_template_capabilities_smoke.gd  ci_verify.sh  dev_controls_smoke.gd  resolver_classification_smoke.gd  run_overlay_verification.sh  settings_shell_smoke.gd  speech_sync_smoke.gd  utterance_bubble_smoke.gd  visual_action_mode_smoke.gd  workflow_overlay_state_smoke.gd  workflow_visibility_smoke.gd
ui/: .gitignore  config.cfg  project.godot
(+149 files in other folders)
