[package]
name = "smolit-assistant-core"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["io-std", "io-util", "macros", "process", "rt-multi-thread", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
